Added the navigation for the webpage, and the correspondent 3 pages we will be working on

--- a/index.html
+++ b/index.html
@@ -7,3 +7,15 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="game.html">Game</a></li>
+          <li><a href="community.html">Community</a></li>
+        </ul>
+      </nav>
+    </header>
+  </body>
+</html>
