Modify the nav, added every option shown in the original website, with some css for functionality

--- a/index.html
+++ b/index.html
@@ -1,21 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Old School RuneScape</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css">
-  </head>
-  <body>
-    <header>
-      <nav>
+</head>
+<body>
+<header>
+    <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="game.html">Game</a></li>
-          <li><a href="community.html">Community</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li class="dropdown">
+                <a href="game.html">Game</a>
+                <ul class="dropdown-menu">
+                    <li><a href="close.html">Download Old School</a></li>
+                    <li><a href="close.html">World Select</a></li>
+                    <li><a href="close.html">World Map</a></li>
+                    <li><a href="close.html">Reedem Code</a></li>
+                    <li><a href="close.html">News</a></li>
+                    <li><a href="close.html">Status</a></li>
+                    <li><a href="close.html">Jagex Launcher</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a href="community.html">Community</a>
+                <ul class="dropdown-menu">
+                  <li><a href="close.html">Polls</a></li>
+                  <li><a href="close.html">Polling Charter</a></li>
+                  <li><a href="close.html">HiScores</a></li>
+                  <li><a href="close.html">RoadMap</a></li>
+                  <li><a href="close.html">Grand Exchange</a></li>
+                  <li><a href="close.html">Discord</a></li>
+                  <li><a href="close.html">Merchandise</a></li>
+                  <li><a href="close.html">Wiki</a></li>
+                  <li><a href="close.html">RuneLite</a></li>
+                </ul>
+            </li>
         </ul>
-      </nav>
-    </header>
-  </body>
+    </nav>
+</header>
+
+</body>
 </html>
