--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <li><a href="close.html">Polls</a></li>
                     <li><a href="close.html">Polling Charter</a></li>
                     <li><a href="close.html">HiScores</a></li>
-                    <li><a href="close.html">RoadMap</a></li>
+                    <li><a href="roadmap.html">RoadMap</a></li>
                     <li><a href="close.html">Grand Exchange</a></li>
                     <li><a href="close.html">Discord</a></li>
                     <li><a href="close.html">Merchandise</a></li>
