--- a/index.html
+++ b/index.html
@@ -8,44 +8,41 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <header>
-    <nav>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li class="dropdown">
+                    <a href="game.html">Game</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="close.html">Download Old School</a></li>
+                        <li><a href="close.html">World Select</a></li>
+                        <li><a href="close.html">World Map</a></li>
+                        <li><a href="close.html">Redeem Code</a></li>
+                        <li><a href="close.html">News</a></li>
+                        <li><a href="close.html">Status</a></li>
+                        <li><a href="close.html">Jagex Launcher</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="community.html">Community</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="close.html">Polls</a></li>
+                        <li><a href="close.html">Polling Charter</a></li>
+                        <li><a href="close.html">HiScores</a></li>
+                        <li><a href="close.html">RoadMap</a></li>
+                        <li><a href="close.html">Grand Exchange</a></li>
+                        <li><a href="close.html">Discord</a></li>
+                        <li><a href="close.html">Merchandise</a></li>
+                        <li><a href="close.html">Wiki</a></li>
+                        <li><a href="close.html">RuneLite</a></li>
+                    </ul>
+                </li>
+                <li><a href="sign_in.html">Sign In</a></li>
+            </ul>
+        </nav>
+    </header>
+    <img src="images/background.jpeg" alt="Banner Image" class="banner-image">
 
-        <ul class="nav-left">
-        </ul>
-        <ul class="nav-center">
-            <li><a href="index.html">Home</a></li>
-            <li class="dropdown">
-                <a href="game.html">Game</a>
-                <ul class="dropdown-menu">
-                    <li><a href="close.html">Download Old School</a></li>
-                    <li><a href="close.html">World Select</a></li>
-                    <li><a href="close.html">World Map</a></li>
-                    <li><a href="close.html">Redeem Code</a></li>
-                    <li><a href="close.html">News</a></li>
-                    <li><a href="close.html">Status</a></li>
-                    <li><a href="close.html">Jagex Launcher</a></li>
-                </ul>
-            </li>
-            <li class="dropdown">
-                <a href="community.html">Community</a>
-                <ul class="dropdown-menu">
-                    <li><a href="close.html">Polls</a></li>
-                    <li><a href="close.html">Polling Charter</a></li>
-                    <li><a href="close.html">HiScores</a></li>
-                    <li><a href="close.html">RoadMap</a></li>
-                    <li><a href="close.html">Grand Exchange</a></li>
-                    <li><a href="close.html">Discord</a></li>
-                    <li><a href="close.html">Merchandise</a></li>
-                    <li><a href="close.html">Wiki</a></li>
-                    <li><a href="close.html">RuneLite</a></li>
-                </ul>
-            </li>
-        </ul>
-        <ul class="nav-right">
-            <li><a href="sign_in.html">Sign In</a></li>
-        </ul>
-    </nav>
-</header>
-
+    
 </html>
