--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <header>
+        <div class="logo-container">
+            <img src="images/oldschool.png" alt="Site Logo" class="logo">
+          </div>          
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
