--- a/index.html
+++ b/index.html
@@ -18,27 +18,27 @@
                 <li class="dropdown">
                     <a href="game.html">Game</a>
                     <ul class="dropdown-menu">
-                        <li><a href="close.html">Download Old School</a></li>
-                        <li><a href="close.html">World Select</a></li>
-                        <li><a href="close.html">World Map</a></li>
-                        <li><a href="close.html">Redeem Code</a></li>
-                        <li><a href="close.html">News</a></li>
+                        <li><a href="close.html">Download Old School (Close)</a></li>
+                        <li><a href="close.html">World Select (Close)</a></li>
+                        <li><a href="close.html">World Map (Close)</a></li>
+                        <li><a href="close.html">Redeem Code (Close)</a></li>
+                        <li><a href="close.html">News (Close)</a></li>
                         <li><a href="close.html">Status</a></li>
-                        <li><a href="close.html">Jagex Launcher</a></li>
+                        <li><a href="close.html">Jagex Launcher (Close)</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a href="community.html">Community</a>
+                    <a href="community.html">Community (Close)</a>
                     <ul class="dropdown-menu">
-                        <li><a href="close.html">Polls</a></li>
-                        <li><a href="close.html">Polling Charter</a></li>
-                        <li><a href="close.html">HiScores</a></li>
-                        <li><a href="close.html">RoadMap</a></li>
-                        <li><a href="close.html">Grand Exchange</a></li>
-                        <li><a href="close.html">Discord</a></li>
-                        <li><a href="close.html">Merchandise</a></li>
-                        <li><a href="close.html">Wiki</a></li>
-                        <li><a href="close.html">RuneLite</a></li>
+                        <li><a href="close.html">Polls (Close)</a></li>
+                        <li><a href="close.html">Polling Charter (Close)</a></li>
+                        <li><a href="close.html">HiScores (Close)</a></li>
+                        <li><a href="road_map.html">RoadMap (Close)</a></li>
+                        <li><a href="close.html">Grand Exchange (Close)</a></li>
+                        <li><a href="close.html">Discord (Close)</a></li>
+                        <li><a href="close.html">Merchandise (Close)</a></li>
+                        <li><a href="close.html">Wiki (Close)</a></li>
+                        <li><a href="close.html">RuneLite (Close)</a></li>
                     </ul>
                 </li>
                 <li><a href="sign_in.html">Sign In</a></li>
