--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                         <li><a href="close.html">World Map (Close)</a></li>
                         <li><a href="close.html">Redeem Code (Close)</a></li>
                         <li><a href="close.html">News (Close)</a></li>
-                        <li><a href="close.html">Status</a></li>
+                        <li><a href="close.html">Status (Close)</a></li>
                         <li><a href="close.html">Jagex Launcher (Close)</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a href="community.html">Community (Close)</a>
+                    <a href="community.html">Community</a>
                     <ul class="dropdown-menu">
                         <li><a href="close.html">Polls (Close)</a></li>
                         <li><a href="close.html">Polling Charter (Close)</a></li>
