Modified css, added more style to the home page, fixed some issues with the nav, and added some more content into the index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <li><a href="close.html">Polls (Close)</a></li>
                         <li><a href="close.html">Polling Charter (Close)</a></li>
                         <li><a href="close.html">HiScores (Close)</a></li>
-                        <li><a href="road_map.html">RoadMap (Close)</a></li>
+                        <li><a href="road_map.html">RoadMap</a></li>
                         <li><a href="close.html">Grand Exchange (Close)</a></li>
                         <li><a href="close.html">Discord (Close)</a></li>
                         <li><a href="close.html">Merchandise (Close)</a></li>
@@ -45,5 +45,14 @@
             </ul>
         </nav>
     </header>
-    <img src="images/background.jpeg" alt="Banner Image" class="banner-image">  
+    <div class="banner">
+        <img src="images/background.jpeg" alt="Banner Image" class="banner-image">
+      
+        <div class="banner-options">
+          <a href="#" class="banner-btn left">Become a Member </a>
+          <a href="#" class="banner-btn center">Try Free</a>
+          <a href="#" class="banner-btn right">Visit HiScores</a>
+        </div>
+      </div>
+       
 </html>
