added some final touches as well as the images for the home page

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <h2 class="news-title">News & Updates</h2>
       
         <div class="news-item">
-          <div class="news-image" style="background-image: url('images/news1.jpg');">
+          <div class="news-image" style="background-image: url('images/news1.jpeg');">
             <div class="news-content">
               <h3>Farming & Autocast QoL Improvements</h3>
               <p>This week’s update brings some handy quality-of-life improvements to Farming and Autocasts!</p>
@@ -81,7 +81,7 @@
         </div>
 
         <div class="news-item">
-            <div class="news-image" style="background-image: url('images/news1.jpg');">
+            <div class="news-image" style="background-image: url('images/news2.jpeg');">
               <div class="news-content">
                 <h3>Poll 84: Stackable Clues & More</h3>
                 <p>Poll 84 introduces a huge set of improvements covering Clue Scrolls, PvM, Banking, and more!</p>
@@ -92,7 +92,7 @@
           </div>
 
         <div class="news-item">
-            <div class="news-image" style="background-image: url('images/news1.jpg');">
+            <div class="news-image" style="background-image: url('images/news3.jpeg');">
               <div class="news-content">
                 <h3>OSRS x StarForge Systems</h3>
                 <p>A refresher on our custom printed Old School RuneScape x StarForge collection</p>
@@ -103,7 +103,7 @@
         </div>
 
         <div class="news-item">
-            <div class="news-image" style="background-image: url('images/news1.jpg');">
+            <div class="news-image" style="background-image: url('images/news4.jpeg');">
               <div class="news-content">
                 <h3>Behind the Scenes of Sailing: Volume 4 (Sailing Alpha Survey Results)</h3>
                 <p>Our latest blog explores the results of the Sailing Alpha survey and how we're handling feedback</p>
@@ -114,7 +114,7 @@
         </div>
 
         <div class="news-item">
-            <div class="news-image" style="background-image: url('images/news1.jpg');">
+            <div class="news-image" style="background-image: url('images/news5.jpeg');">
               <div class="news-content">
                 <h3>Poll 83: Castle Wars Update</h3>
                 <p>Poll 83 Castle Wars changes have arrived!</p>
