--- a/roadmap.html
+++ b/roadmap.html
@@ -10,15 +10,20 @@
      <header>
        <img id="roadmap-header" src="images/roadmaphead.png" alt="Header for page">
      </header>
-      <section id="road-box">
         <h1>Runescape 2025 RoadMap</h1>
-        <ul>
-          <li>test</li>
-          <li>test</li>
-          <li>test</li>
-          <li>test</li>
-        </ul>
-      </section>
+        <table border="1">
+          <thread>
+            <tr>
+              <th>Update</th>
+              <th>Description</th>
+              <th>Release Date</th>
+            </tr>
+          </thread>
+          <tbody>
+            <tr>
+              <td>Sailing: Public Alpha</td>
+              <td>The Sailing Alpha is a massive, open playtest packed with exciting high-seas adventure - letting you test Old School's first new skill.</td>
+              <td>March 2025</td>
     </main>
   </body>
 </html>
