--- a/roadmap.html
+++ b/roadmap.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Road Map</title>
   </head>
-  <body>
+  <body class="raodmap">
     <img id="roadmap-background" src="images/roadmapback.png" alt="Background image">
     <main>
      <header>
