--- a/roadmap.html
+++ b/roadmap.html
@@ -5,20 +5,19 @@
     <title>Road Map</title>
   </head>
   <body class="roadmap">
-    <img id="roadmap-background" src="images/roadmapback.png" alt="Background image">
     <main>
      <header>
        <img id="roadmap-header" src="images/roadmaphead.png" alt="Header for page">
      </header>
         <h1>Runescape 2025 RoadMap</h1>
         <table border="1">
-          <thread>
+          <thead>
             <tr>
               <th>Update</th>
               <th>Description</th>
               <th>Release Date</th>
             </tr>
-          </thread>
+          </thead>
           <tbody>
             <tr>
               <td>Sailing Public Alpha</td>
@@ -32,7 +31,7 @@
             </tr>            
             <tr>
               <td>Varlamore The Final Dawn</td>
-              <td>The final part of our latest area expansion, including a new Fletching activity, two new bosses, a Slayer Dungeon and the finale to the Varlamore questline.td>
+              <td>The final part of our latest area expansion, including a new Fletching activity, two new bosses, a Slayer Dungeon and the finale to the Varlamore questline.</td>
               <td>Summer 2025</td>
             </tr>            
             <tr>
