--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <li><a href="close.html">Polls (Close)</a></li>
                         <li><a href="close.html">Polling Charter (Close)</a></li>
                         <li><a href="close.html">HiScores (Close)</a></li>
-                        <li><a href="roadmap.html">RoadMap</a></li>
+                        <li><a href="road_map.html">RoadMap</a></li>
                         <li><a href="close.html">Grand Exchange (Close)</a></li>
                         <li><a href="close.html">Discord (Close)</a></li>
                         <li><a href="close.html">Merchandise (Close)</a></li>
