--- a/road_map.html
+++ b/road_map.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Road Map</title>
   </head>
-  <body class="roadmap">
+  <body class="road_map">
     <main>
      <header>
        <img id="roadmap-header" src="images/roadmaphead.png" alt="Header for page">
