--- a/road_map.html
+++ b/road_map.html
@@ -5,6 +5,7 @@
     <title>Road Map</title>
   </head>
   <body class="road_map">
+    <img id="roadmapbackground" src="images/roadmapbackground" alt="Background">
     <main>
      <header>
        <img id="roadmap-header" src="images/roadmaphead.png" alt="Header for page">
