--- a/road_map.html
+++ b/road_map.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Road Map</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body class="road_map">
     <main>
