--- a/road_map.html
+++ b/road_map.html
@@ -8,9 +8,9 @@
   <body class="road_map">
     <main>
      <header>
-       <img id="roadmap-header" src="images/roadmaphead.png" alt="Header for page">
+       <img id="roadmap-logo" src="images/oldschool.png" alt="logo for page">
      </header>
-        <h1>Runescape 2025 RoadMap</h1>
+        <h1 id="roadmap-t1">Runescape 2025 RoadMap</h1>
         <table border="1">
           <thead>
             <tr>
