--- a/road_map.html
+++ b/road_map.html
@@ -8,7 +8,7 @@
   <body class="road_map">
     <main>
      <header>
-       <img id="roadmap-logo" src="images/oldschool.png" alt="logo for page">
+       <img class="logo" src="images/oldschool.png" alt="logo for page">
      </header>
         <h1 id="roadmap-t1">Runescape 2025 RoadMap</h1>
         <table border="1">
