--- a/road_map.html
+++ b/road_map.html
@@ -9,6 +9,8 @@
     <main>
      <header>
        <img class="logo" src="images/oldschool.png" alt="logo for page">
+       <img src="images/roadmapback.png" alt="Banner Image" class="banner-image">
+
      </header>
         <h1 id="roadmap-t1">Runescape 2025 RoadMap</h1>
         <table border="1">
