--- a/road_map.html
+++ b/road_map.html
@@ -8,9 +8,8 @@
   <body class="road_map">
     <main>
      <header>
-       <img class="logo" src="images/oldschool.png" alt="logo for page">
-       <img src="images/roadmapback.png" alt="Banner Image" class="banner-image">
-
+       <img src="images/oldschool.png" alt="logo for page" class="logo">
+       <img src="images/roadmaphead.png" alt="Banner Image" class="banner-image">
      </header>
         <h1 id="roadmap-t1">Runescape 2025 RoadMap</h1>
         <table border="1">
