--- a/road_map.html
+++ b/road_map.html
@@ -7,10 +7,8 @@
   </head>
   <body class="road_map">
     <main>
-     <header>
-       <img src="images/oldschool.png" alt="logo for page" class="logo">
-       <img src="images/roadmaphead.png" alt="Banner Image" class="banner-image">
-     </header>
+      <img src="images/oldschool.png" alt="logo for page" class="logo">
+      <img src="images/roadmaphead.png" alt="Banner Image" class="road-banner-image">
         <h1 id="roadmap-t1">Runescape 2025 RoadMap</h1>
         <table border="1">
           <thead>
