--- a/road_map.html
+++ b/road_map.html
@@ -8,7 +8,7 @@
   <body class="road_map">
     <main>
       <img src="images/oldschool.png" alt="logo for page" class="logo">
-      <img src="images/roadmaphead.png" alt="Banner Image" class="road-banner-image">
+      <img src="images/roadmapbanner.png" alt="Banner Image" class="road-banner-image">
         <h1 id="roadmap-t1">Runescape 2025 RoadMap</h1>
         <table border="1">
           <thead>
