--- a/road_map.html
+++ b/road_map.html
@@ -7,8 +7,10 @@
   </head>
   <body class="road_map">
     <main>
+    <head>
       <img src="images/oldschool.png" alt="logo for page" class="logo">
       <img src="images/roadmapbanner.png" alt="Banner Image" class="road-banner-image">
+    </header>
         <h1 id="roadmap-t1">Runescape 2025 RoadMap</h1>
         <table border="1">
           <thead>
