--- a/road_map.html
+++ b/road_map.html
@@ -7,7 +7,7 @@
   </head>
   <body class="road_map">
     <main>
-    <head>
+    <header>
       <img src="images/oldschool.png" alt="logo for page" class="logo">
       <img src="images/roadmapbanner.png" alt="Banner Image" class="road-banner-image">
     </header>
