--- a/road_map.html
+++ b/road_map.html
@@ -28,7 +28,7 @@
                 </div>
               </td>
             </tr>
-            <tr>
+            <tr class="update-row">
               <td>
                 <span class="show-default">Yama Master of Pacts</span>
                 <div class="show-on-hover update info">
