--- a/road_map.html
+++ b/road_map.html
@@ -24,7 +24,7 @@
                 <span class="show-default">Sailing Public Alpha</span>
                 <div class="show-on-hover update-info">
                   <span>Description: The Sailing Alpha is a massive, open playtest packed with exciting high-seas adventure - letting you test Old School's first new skill.</span>
-                  <span>Release Date: March 2025</span>
+                  <span class="release-date">Release Date: March 2025</span>
                 </div>
               </td>
             </tr>
@@ -33,11 +33,11 @@
                 <span class="show-default">Yama Master of Pacts</span>
                 <div class="show-on-hover update info">
                   <span>Description: Yama is not for the faint of heart... An endgame duo encounter featuring a new 'contract' mechanic that will shape each encounter with this powerful demon.</span>
-                  <span>Release Date: Spring 2025</span>
+                  <span class="release-date">Release Date: Spring 2025</span>
                 </div>
               </td>
             </tr>
-            <tr>
+            <tr class="update-row">
               <td>
                 <span class="show-default"> </span>
                 <div class="show-on-hover update-info">
