--- a/road_map.html
+++ b/road_map.html
@@ -21,10 +21,12 @@
           <tbody>
             <tr class="update-row">
               <td>
-                <span class="show-default">Sailing Public Alpha</span>
+                <div class="show-default">
+                  <span class="update-name">Sailing Public Alpha</span>
+                  <span class="release-date">Release Date: March 2025</span>
+                </div>
                 <div class="show-on-hover update-info">
                   <span>The Sailing Alpha is a massive, open playtest packed with exciting high-seas adventure - letting you test Old School's first new skill.</span>
-                  <span class="release-date">Release Date: March 2025</span>
                 </div>
               </td>
             </tr>
@@ -32,7 +34,7 @@
               <td>
                 <span class="show-default">Yama Master of Pacts</span>
                 <div class="show-on-hover update info">
-                  <span>Description: ama is not for the faint of heart... An endgame duo encounter featuring a new 'contract' mechanic that will shape each encounter with this powerful demon.</span>
+                  <span>Yama is not for the faint of heart... An endgame duo encounter featuring a new 'contract' mechanic that will shape each encounter with this powerful demon.</span>
                   <span class="release-date">Release Date: Spring 2025</span>
                 </div>
               </td>
