--- a/road_map.html
+++ b/road_map.html
@@ -32,10 +32,12 @@
             </tr>
             <tr class="update-row">
               <td>
-                <span class="show-default">Yama Master of Pacts</span>
+                <div class="show-default">
+                  <span class="update-name">Yama Master of Pacts</span>
+                  <span class="release-date">Release Date: Spring 2025</span>
+                </div>
                 <div class="show-on-hover update info">
                   <span>Yama is not for the faint of heart... An endgame duo encounter featuring a new 'contract' mechanic that will shape each encounter with this powerful demon.</span>
-                  <span class="release-date">Release Date: Spring 2025</span>
                 </div>
               </td>
             </tr>
