--- a/road_map.html
+++ b/road_map.html
@@ -36,7 +36,7 @@
                   <span class="update-name">Yama Master of Pacts</span>
                   <span class="release-date">Release Date: Spring 2025</span>
                 </div>
-                <div class="show-on-hover update info">
+                <div class="show-on-hover update-info">
                   <span>Yama is not for the faint of heart... An endgame duo encounter featuring a new 'contract' mechanic that will shape each encounter with this powerful demon.</span>
                 </div>
               </td>
