--- a/road_map.html
+++ b/road_map.html
@@ -21,48 +21,44 @@
           <tbody>
             <tr class="update-row">
               <td>
-                <div class="show-default">
-                  <span class="update-name">Sailing Public Alpha</span>
-                  <span class="release-date">Release Date: March 2025</span>
-                </div>
-                <div class="show-on-hover update-info">
+                <span class="update-name">Sailing Public Alpha</span>
+                <div class="show-on-hover">
                   <span>The Sailing Alpha is a massive, open playtest packed with exciting high-seas adventure - letting you test Old School's first new skill.</span>
+                  <span class="release-date">Release Date: March 2025</span>
                 </div>
               </td>
             </tr>
             <tr class="update-row">
               <td>
-                <div class="show-default">
-                  <span class="update-name">Yama Master of Pacts</span>
-                  <span class="release-date">Release Date: Spring 2025</span>
-                </div>
-                <div class="show-on-hover update-info">
+                <span class="update-name">Yama Master of Pacts</span>
+                <div class="show-on-hover">
                   <span>Yama is not for the faint of heart... An endgame duo encounter featuring a new 'contract' mechanic that will shape each encounter with this powerful demon.</span>
+                  <span class="release-date">Release Date: Spring 2025</span>
                 </div>
               </td>
             </tr>
             <tr class="update-row">
               <td>
                 <span class="show-default">Varlamore: The Final Dawn</span>
-                <div class="show-on-hover update-info">
+                <span class="release-date">Release Date: Summer 2025</span>
+                <div class="show-on-hover">
                   <span>The final part of our latest area expansion, including a new Fletching activity, two new bosses, a Slayer Dungeon and the finale to the Varlamore questline.</span>
-                  <span class="release-date">Release Date: Summer 2025</span>
                 </div>
               </td>
             </tr>
             <tr class="update-row">
               <td>
                 <span class="show-default">Summer Sweep Up</span>
-                <div class="show-on-hover update-info">
+                <div class="show-on-hover">
                   <span>Akin to Project Rebalance, we're back with another round of tweaks to preserve the long-term health of the game. Including, Loot Table changes, Slayer improvements and more!</span>
-                  <span class="release-date">Release Date:</span>
+                  <span class="release-date">Release Date: Summer 2025</span>
                 </div>
               </td>
             </tr>
             <tr class="update-row">
               <td>
                 <span class="show-default">Sailing</span>
-                <div class="show-on-hover update-info">
+                <div class="show-on-hover">
                   <span>Old School's first new skill will be arriving this year, with plenty of new content, training methods and areas for you to explore out on the open seas of Gielinor!</span>
                   <span class="release-date">Release Date: Autumn 2025</span>
                 </div>
@@ -71,7 +67,7 @@
             <tr class="update-row">
               <td>
                 <span class="show-default">Deadman 2025</span>
-                <div class="show-on-hover update-info">
+                <div class="show-on-hover">
                   <span>Taking the learnings from the previous Deadman, we're bring DMM back this year with a new finale, new breach monsters and brand new sigils! Be prepared...</span>
                   <span class="release-date">Release Date: Winter 2025</span>
                 </div>
@@ -80,7 +76,7 @@
             <tr class="update-row">
               <td>
                 <span class="show-default">The Blood Moon Rises</span>
-                <div class="show-on-hover update-info">
+                <div class="show-on-hover">
                   <span>Are you ready to save the citizens of Morytanis in the grand finale to the Vampyre storyline. Expect high-stakes storytelling, complex puzzles, and some of the most challenging combat encounters yet seen in a quest.</span>
                   <span class="release-date">Release Date: Early 2026</span>
                 </div>
@@ -89,7 +85,7 @@
             <tr class="update-row">
               <td>
                 <span class="show-default">HD and API Update</span>
-                <div class="show-on-hover update-info">
+                <div class="show-on-hover">
                   <span>Enhancing the core Old School experience even further with HD Mode, improved performance on SD Mode and creating an Official Plugin echosystem for both Desktop and Mobile!</span>
                   <span class="release-date">Release Date: Expect More Soon!</span>
                 </div>
@@ -98,7 +94,7 @@
             <tr class="update-row">
               <td>
                 <span class="show-default">Project Zanaris</span>
-                <div class="show-on-hover update-info">
+                <div class="show-on-hover">
                   <span>Community Servers will take the Old School RuneScape you know and love and let you tweak different elements to create a brand-new gameplay experience and more.</span>
                   <span class="release-date">Release Date: Playtests Coming Soon!</span>
                 </div>
@@ -107,7 +103,7 @@
             <tr class="update-row">
               <td>
                 <span class="show-default">Seasonal Events</span>
-                <div class="show-on-hover update-info">
+                <div class="show-on-hover">
                   <span>You can expect the same wonderful events to return throughout the year, including Pride, Halloween and Christmas with wacky new adventures and rewards!</span>
                   <span class="release-date">Release Date: Various Releases</span>
                 </div>
@@ -116,7 +112,7 @@
             <tr class="update-row">
               <td>
                 <span class="show-default">Quality of Life Polls</span>
-                <div class="show-on-hover update-info">
+                <div class="show-on-hover">
                   <span>QoL Polls will be continuing throughout the year in order to continue updating smaller areas of the game, with some much needed TLC!	</span>
                   <span class="release-date">Release date: Various Releases</span>
                 </div>
