--- a/road_map.html
+++ b/road_map.html
@@ -21,7 +21,7 @@
           <tbody>
             <tr class="update-row">
               <td>
-                <span class="update-name">Sailing Public Alpha</span>
+                <span class="show-default">Sailing Public Alpha</span>
                 <div class="show-on-hover">
                   <span>The Sailing Alpha is a massive, open playtest packed with exciting high-seas adventure - letting you test Old School's first new skill.</span>
                   <span class="release-date">Release Date: March 2025</span>
@@ -30,7 +30,7 @@
             </tr>
             <tr class="update-row">
               <td>
-                <span class="update-name">Yama Master of Pacts</span>
+                <span class="show-default">Yama Master of Pacts</span>
                 <div class="show-on-hover">
                   <span>Yama is not for the faint of heart... An endgame duo encounter featuring a new 'contract' mechanic that will shape each encounter with this powerful demon.</span>
                   <span class="release-date">Release Date: Spring 2025</span>
@@ -40,9 +40,9 @@
             <tr class="update-row">
               <td>
                 <span class="show-default">Varlamore: The Final Dawn</span>
-                <span class="release-date">Release Date: Summer 2025</span>
                 <div class="show-on-hover">
                   <span>The final part of our latest area expansion, including a new Fletching activity, two new bosses, a Slayer Dungeon and the finale to the Varlamore questline.</span>
+                  <span class="release-date">Release Date: Summer 2025</span>
                 </div>
               </td>
             </tr>
