--- a/road_map.html
+++ b/road_map.html
@@ -20,7 +20,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr class="update-row">
+              <tr class="update-row row-sailing">
                 <td>
                   <span class="show-default">Sailing Public Alpha</span>
                   <div class="show-on-hover">
