Add image styles and update Sign-In page structure for improved layout

--- a/sign_in.html
+++ b/sign_in.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+ 
 <!--home page nav-->
 <ul class="nav-left">
 </ul>
@@ -49,10 +50,14 @@
 </nav>
 </header>
 
-<!-- title page-->
-<h1>Sign In HERE!</h1>
+<!--home page nav end-->
 
-  <!-- sign up form-->
+<!--images-->
+  <img id="img1" src="images/dragonfight.jpg" alt="rusty scroll">
+  <img id="img2" src="images/Dungeon.jpg" alt="rusty scroll">
+
+
+  <!-- sign in form-->
   <div class="translucent-form-overlay">
     <form class="translucent-form" action="index.html" method="post" spellcheck="true" autocomplete="on">
       <div class="rowcolumns">
@@ -85,6 +90,7 @@
       </div>
     </form>
   </div>
+
 </body>
 
 </html>
