Update comment for sign-in page images section for clarity

--- a/sign_in.html
+++ b/sign_in.html
@@ -52,7 +52,7 @@
 
 <!--home page nav end-->
 
-<!--images-->
+<!--sign in page images-->
   <img id="img1" src="images/dragonfight.jpg" alt="rusty scroll">
   <img id="img2" src="images/Dungeon.jpg" alt="rusty scroll">
 
