Refactor sign-in form inputs for consistency and remove unused section

--- a/sign_in.html
+++ b/sign_in.html
@@ -62,11 +62,7 @@
   There are currently <strong>101,730</strong> people playing!
 </div>
 
-<section class="intro-section">
-  <h1 class="intro-title">Welcome to Old School RuneScape!</h1>
-</section>
-
-
+<!--policy part-->
 <footer class="site-footer">
   <div class="footer-content">
     <p>
@@ -101,12 +97,12 @@
     <form class="translucent-form" action="index.html" method="post" spellcheck="true" autocomplete="on">
       <div class="rowcolumns">
         <label>Username*
-          <input type="text" name="name" placeholder="USERNAME" required autocomplete="username">
+          <input type="text" name="username" placeholder="USERNAME" required autocomplete="username">
         </label>
       </div>
       <div class="rowcolumns">
         <label>Email*
-          <input type="email" name="email" placeholder="EMAIL" required autocomplete="email">
+          <input type="text" name="email" placeholder="EMAIL" required autocomplete="email">
         </label>
         </label>
       </div>
