--- a/road_map.html
+++ b/road_map.html
@@ -122,6 +122,27 @@
             </tbody>
           </table>
         </div>
+        <footer class="site-footer">
+          <div class="footer-content">
+            <p>
+              This website and its contents are copyright © 1999 - 2025 Jagex Games Ltd, 220 Science Park, Cambridge, CB4 0WA, United Kingdom.
+            </p>
+            <p>
+              Use of this website is subject to our 
+              <a href="#">Terms & Conditions</a> and 
+              <a href="#">Privacy Policy</a>
+            </p>
+            <p>
+              <a href="#">Rules of Old School RuneScape</a> |
+              <a href="#">Change Cookie Settings</a> |
+              <a href="#">Do Not Sell Or Share My Personal Information</a>
+            </p>
+            <p><a href="#">RSS Feed</a></p>
+            <p class="footer-note">
+              * The external links provided in this section are collected to give you an easy way of engaging with some of the most popular outposts of the OSRS community. Jagex is not responsible for the maintenance and safety of content produced and hosted by third parties and any use of third-party sites is at your own risk.
+            </p>
+          </div>
+        </footer> 
     </main>
   </body>
 </html>
