--- a/road_map.html
+++ b/road_map.html
@@ -56,7 +56,7 @@
                   </div>
                 </td>
               </tr>
-              <tr class="update-row">
+              <tr class="update-row row-sailing-two">
                 <td>
                   <span class="show-default">Sailing</span>
                   <div class="show-on-hover">
