--- a/road_map.html
+++ b/road_map.html
@@ -74,7 +74,7 @@
                   </div>
                 </td>
               </tr>
-              <tr class="update-row">
+              <tr class="update-row row-blood-moon">
                 <td>
                   <span class="show-default">The Blood Moon Rises</span>
                   <div class="show-on-hover">
