--- a/road_map.html
+++ b/road_map.html
@@ -29,7 +29,7 @@
                   </div>
                 </td>
               </tr>
-              <tr class="update-row">
+              <tr class="update-row row-yama">
                 <td>
                   <span class="show-default">Yama Master of Pacts</span>
                   <div class="show-on-hover">
