--- a/road_map.html
+++ b/road_map.html
@@ -65,7 +65,7 @@
                   </div>
                 </td>
               </tr>
-              <tr class="update-row">
+              <tr class="update-rowrow-deadman">
                 <td>
                   <span class="show-default">Deadman 2025</span>
                   <div class="show-on-hover">
