--- a/sign_in.html
+++ b/sign_in.html
@@ -62,7 +62,7 @@
   </div>
 
   <section class="intro-section">
-    <h1 class="intro-title"></h1>
+    <h1 class="intro-title">.</h1>
   </section>
 
   <!--policy part-->
@@ -110,12 +110,10 @@
         <label>Email*
           <input type="text" name="email" placeholder="EMAIL" required autocomplete="email">
         </label>
-        </label>
       </div>
       <div class="rowcolumns">
         <label>Password*
-          <input type="text" name="password" placeholder="PASSWORD" required autocomplete="password"
-            pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}">
+          <input type="text" name="password" placeholder="PASSWORD" required autocomplete="password">
           <span class="password-requirements">Password must be at least 8 characters long, contain at least one number,
             one uppercase letter, and one lowercase letter.</span>
         </label>
