--- a/road_map.html
+++ b/road_map.html
@@ -92,7 +92,7 @@
                   </div>
                 </td>
               </tr>
-              <tr class="update-row">
+              <tr class="update-row row-zanaris">
                 <td>
                   <span class="show-default">Project Zanaris</span>
                   <div class="show-on-hover">
