Update password input autocomplete attribute and remove type from player status dropdown

--- a/sign_in.html
+++ b/sign_in.html
@@ -113,14 +113,14 @@
       </div>
       <div class="rowcolumns">
         <label>Password*
-          <input type="text" name="password" placeholder="PASSWORD" required autocomplete="password">
+          <input type="text" name="password" placeholder="PASSWORD" required autocomplete="new-password">
           <span class="password-requirements">Password must be at least 8 characters long, contain at least one number,
             one uppercase letter, and one lowercase letter.</span>
         </label>
       </div>
       <div class="rowcolumns">
         <label>Type Of Player:
-          <select name="status" type="text">
+          <select name="status">
             <option>Veteran</option>
             <option value="Beginner">Beginner</option>
           </select>
