added a large chunck of rows

--- a/road_map.html
+++ b/road_map.html
@@ -38,7 +38,7 @@
                   </div>
                 </td>
               </tr>
-              <tr class="update-row">
+              <tr class="update-row row-varlamore">
                 <td>
                   <span class="show-default">Varlamore: The Final Dawn</span>
                   <div class="show-on-hover">
@@ -47,7 +47,7 @@
                   </div>
                 </td>
               </tr>
-              <tr class="update-row">
+              <tr class="update-row row-basic">
                 <td>
                   <span class="show-default">Summer Sweep Up</span>
                   <div class="show-on-hover">
@@ -83,7 +83,7 @@
                   </div>
                 </td>
               </tr>
-              <tr class="update-row">
+              <tr class="update-row row-basic">
                 <td>
                   <span class="show-default">HD and API Update</span>
                   <div class="show-on-hover">
@@ -101,7 +101,7 @@
                   </div>
                 </td>
               </tr>
-              <tr class="update-row">
+              <tr class="update-row row-basic">
                 <td>
                   <span class="show-default">Seasonal Events</span>
                   <div class="show-on-hover">
@@ -110,7 +110,7 @@
                   </div>
                 </td>
               </tr>
-              <tr class="update-row">
+              <tr class="update-row row-basic">
                 <td>
                   <span class="show-default">Quality of Life Polls</span>
                   <div class="show-on-hover">
