--- a/road_map.html
+++ b/road_map.html
@@ -7,10 +7,47 @@
   </head>
   <body class="road_map">
     <main>
-    <header>
-      <img src="images/oldschool.png" alt="logo for page" class="logo">
-      <img src="images/roadmapbanner.png" alt="Banner Image" class="road-banner-image">
+      <header>
+        <div class="logo-container">
+            <img src="images/oldschool.png" alt="Site Logo" class="logo">
+          </div>          
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li class="dropdown">
+                    <a href="game.html">Game</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="close.html">Download Old School (Close)</a></li>
+                        <li><a href="close.html">World Select (Close)</a></li>
+                        <li><a href="close.html">World Map (Close)</a></li>
+                        <li><a href="close.html">Redeem Code (Close)</a></li>
+                        <li><a href="close.html">News (Close)</a></li>
+                        <li><a href="close.html">Status (Close)</a></li>
+                        <li><a href="close.html">Jagex Launcher (Close)</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="community.html">Community</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="close.html">Polls (Close)</a></li>
+                        <li><a href="close.html">Polling Charter (Close)</a></li>
+                        <li><a href="close.html">HiScores (Close)</a></li>
+                        <li><a href="road_map.html">RoadMap</a></li>
+                        <li><a href="close.html">Grand Exchange (Close)</a></li>
+                        <li><a href="close.html">Discord (Close)</a></li>
+                        <li><a href="close.html">Merchandise (Close)</a></li>
+                        <li><a href="close.html">Wiki (Close)</a></li>
+                        <li><a href="close.html">RuneLite (Close)</a></li>
+                    </ul>
+                </li>
+                <li><a href="sign_in.html">Sign In</a></li>
+            </ul>
+        </nav>
     </header>
+    <div>
+      <img src="images/roadmapbanner.png" alt="Banner Image" class="road-banner-image">
+    </div>
+
         <h1 id="roadmap-t1">Runescape 2025 RoadMap</h1>
         <div class="roadmap-wrapper">
           <table border="1">
